# tacoshell

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cargo.workspace.toml  Makefile  README.md  ROADMAP.md  TODO.md  clippy.toml  codecov.yml  eslint.config.js  go.mod  package.json  plan-tacoshellRefactor.prompt.md  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json
.cargo/: audit.toml
.claude/: MEMORY.md
.claude/homunculus/instincts/inherited/: tacoshell-instincts.yaml
.claude/memory/: project_tacoshell.md
.claude/skills/ci-status/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/tacoshell/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
api/: README.md
cmd/tacoshell/: main.go
configs/: config.yaml
crates/tacoshell-core/: Cargo.toml
crates/tacoshell-core/src/: error.rs  lib.rs  models.rs  traits.rs
crates/tacoshell-db/: Cargo.toml
crates/tacoshell-db/migrations/: 001_initial_schema.sql
crates/tacoshell-db/src/: lib.rs  migrations.rs  repository.rs
crates/tacoshell-k8s/: Cargo.toml
crates/tacoshell-k8s/src/: cluster.rs  lib.rs  models.rs
crates/tacoshell-secrets/: Cargo.toml
crates/tacoshell-secrets/src/: encryption.rs  lib.rs
crates/tacoshell-ssh/: Cargo.toml
crates/tacoshell-ssh/src/: channel.rs  lib.rs  session.rs
crates/tacoshell-storage/: Cargo.toml
crates/tacoshell-storage/src/: lib.rs  repository.rs
crates/tacoshell-transfer/: Cargo.toml
crates/tacoshell-transfer/src/: lib.rs  sftp.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PROTOCOLS.md  README.md  ROADMAP.md  SECURITY.md  STATE.md  STORAGE.md  TDD.md
docs/adr/: 0001-project-programming-language.md  0001-use-rust.md
internal/app/: app.go
scripts/: README.md
src/: main.rs
test/: README.md
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.css  App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
ui/src/components/: AddServerDialog.tsx  ConnectDialog.tsx  GlobalSidebar.tsx  KubernetesView.tsx  MainContent.tsx  SecretsManager.tsx  ServerDetail.tsx  SftpView.tsx  Sidebar.tsx  SplitPaneLayout.tsx  TabBar.tsx  Terminal.tsx  ViewManager.tsx
ui/src/hooks/: useConnectionManager.ts  useTauri.ts
ui/src/stores/: appStore.ts  layoutStore.ts
ui/src/types/: index.ts
