[package]
name = "tacoshell-ssh"
description = "SSH client implementation for Tacoshell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tacoshell-core.workspace = true
ssh2.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true


